--- a/styles/output.css
+++ b/styles/output.css
@@ -1915,6 +1915,11 @@ video {
   border-style: none;
 }
 
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
 .border-red-500 {
   --tw-border-opacity: 1;
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
@@ -1927,6 +1932,11 @@ video {
 
 .bg-black\/50 {
   background-color: rgb(0 0 0 / 0.5);
+}
+
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
 .bg-gray-900 {
@@ -2117,6 +2127,10 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .text-left {
@@ -2660,6 +2674,27 @@ body{
   background-color: F6F7F8;
 }
 
+.floating-btn {
+  position: fixed;
+  bottom: 20px;
+  /* Distância do botão até a parte inferior da página */
+  left: 20px;
+  /* Distância do botão até a margem esquerda da página */
+  background-color: #107a0e;
+  /* Cor de fundo do botão */
+  color: white;
+  /* Cor do texto do botão */
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  /* Sombra para um efeito visual */
+  z-index: 999;
+  /* Garante que o botão fique sobre outros elementos */
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
@@ -2756,3 +2791,6 @@ body{
     }
   }
 }
+
+
+
